--- a/iStore/Views/CategoryViewCell.xib
+++ b/iStore/Views/CategoryViewCell.xib
@@ -1,21 +1,62 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="CategoryViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-            <autoresizingMask key="autoresizingMask"/>
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" translatesAutoresizingMaskIntoConstraints="NO" id="gTV-IL-0wX" customClass="CategoryViewCell" customModule="iStore" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
-                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6o3-YY-TSa">
+                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9pz-Ma-2l5">
+                                <rect key="frame" x="37" y="16" width="54" height="54"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="54" id="mHc-Gz-VWJ"/>
+                                    <constraint firstAttribute="height" constant="54" id="uD0-fe-Mq5"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e6e-Ez-0af">
+                                <rect key="frame" x="43.333333333333329" y="78" width="41.333333333333329" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="e6e-Ez-0af" firstAttribute="top" secondItem="9pz-Ma-2l5" secondAttribute="bottom" constant="8" id="2q1-MK-EwR"/>
+                            <constraint firstItem="e6e-Ez-0af" firstAttribute="centerX" secondItem="6o3-YY-TSa" secondAttribute="centerX" id="EAq-S5-xfK"/>
+                            <constraint firstItem="9pz-Ma-2l5" firstAttribute="centerX" secondItem="6o3-YY-TSa" secondAttribute="centerX" id="Plb-mj-kG1"/>
+                            <constraint firstAttribute="width" constant="128" id="YI0-M4-L0p"/>
+                            <constraint firstAttribute="bottom" secondItem="e6e-Ez-0af" secondAttribute="bottom" constant="16" id="ZlG-ec-hyW"/>
+                            <constraint firstItem="9pz-Ma-2l5" firstAttribute="top" secondItem="6o3-YY-TSa" secondAttribute="top" constant="16" id="iG3-6S-600"/>
+                            <constraint firstAttribute="height" constant="128" id="tYJ-5H-rBH"/>
+                        </constraints>
+                    </view>
+                </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
+            <constraints>
+                <constraint firstItem="6o3-YY-TSa" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="5W8-3o-KaD"/>
+                <constraint firstItem="6o3-YY-TSa" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="XFh-xE-mJE"/>
+                <constraint firstAttribute="trailing" secondItem="6o3-YY-TSa" secondAttribute="trailing" id="gVU-Bf-8oJ"/>
+                <constraint firstAttribute="bottom" secondItem="6o3-YY-TSa" secondAttribute="bottom" id="vO7-yD-0BV"/>
+            </constraints>
+            <size key="customSize" width="128" height="128"/>
+            <connections>
+                <outlet property="icon" destination="9pz-Ma-2l5" id="QiA-6F-ihW"/>
+                <outlet property="label" destination="e6e-Ez-0af" id="0Ck-37-2W6"/>
+            </connections>
+            <point key="canvasLocation" x="90.07633587786259" y="17.605633802816904"/>
         </collectionViewCell>
     </objects>
 </document>
