--- a/iStore/Views/Main.storyboard
+++ b/iStore/Views/Main.storyboard
@@ -180,22 +180,99 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Category" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GOj-o0-Kwj">
-                                <rect key="frame" x="161" y="218" width="71" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="CXe-aS-Hxo">
+                                <rect key="frame" x="0.0" y="103" width="393" height="651"/>
+                                <subviews>
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="hLh-J6-jMF">
+                                        <rect key="frame" x="0.0" y="0.0" width="393" height="651"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="8" minimumInteritemSpacing="0.0" id="6As-tg-7ry">
+                                            <size key="itemSize" width="200" height="300"/>
+                                            <size key="headerReferenceSize" width="50" height="144"/>
+                                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                            <inset key="sectionInset" minX="8" minY="0.0" maxX="8" maxY="0.0"/>
+                                        </collectionViewFlowLayout>
+                                        <cells/>
+                                        <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="BrandsHeader" id="RZ7-Wl-JnU">
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="144"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </collectionReusableView>
+                                        <connections>
+                                            <outlet property="dataSource" destination="F6o-3y-I6i" id="U5O-LY-3FZ"/>
+                                            <outlet property="delegate" destination="F6o-3y-I6i" id="tJT-lN-SHW"/>
+                                        </connections>
+                                    </collectionView>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" alignment="center" baselineRelativeArrangement="YES" translatesAutoresizingMaskIntoConstraints="NO" id="t7a-it-7Jy">
+                                <rect key="frame" x="0.0" y="754" width="393" height="64"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No filters applied" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hZf-X2-HAQ">
+                                        <rect key="frame" x="24" y="22" width="186.33333333333334" height="20.333333333333329"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yvu-uO-bKk">
+                                        <rect key="frame" x="210.33333333333337" y="15.000000000000004" width="158.66666666666663" height="34.333333333333343"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="filled" image="line.3.horizontal.decrease.circle.fill" catalog="system" imagePlacement="leading" title="FILTER" imagePadding="8" buttonSize="medium"/>
+                                        <connections>
+                                            <segue destination="Zyb-Ye-yhr" kind="presentation" id="FCn-4D-aRf"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="64" id="kAR-rx-FhZ"/>
+                                </constraints>
+                                <edgeInsets key="layoutMargins" top="0.0" left="24" bottom="0.0" right="24"/>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="8sa-K1-Spj"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="t7a-it-7Jy" firstAttribute="leading" secondItem="8sa-K1-Spj" secondAttribute="leading" id="5NQ-hw-GzX"/>
+                            <constraint firstItem="8sa-K1-Spj" firstAttribute="trailing" secondItem="t7a-it-7Jy" secondAttribute="trailing" id="NPd-1x-Qad"/>
+                            <constraint firstItem="CXe-aS-Hxo" firstAttribute="top" secondItem="8sa-K1-Spj" secondAttribute="top" id="NRp-9Y-o9c"/>
+                            <constraint firstItem="8sa-K1-Spj" firstAttribute="bottom" secondItem="t7a-it-7Jy" secondAttribute="bottom" id="S5h-MF-LEb"/>
+                            <constraint firstItem="t7a-it-7Jy" firstAttribute="top" secondItem="CXe-aS-Hxo" secondAttribute="bottom" id="YvU-xu-a2Q"/>
+                            <constraint firstItem="CXe-aS-Hxo" firstAttribute="leading" secondItem="8sa-K1-Spj" secondAttribute="leading" id="jDc-Sx-lgO"/>
+                            <constraint firstItem="8sa-K1-Spj" firstAttribute="trailing" secondItem="CXe-aS-Hxo" secondAttribute="trailing" id="ooj-fx-8tJ"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="ku2-kf-04j"/>
+                    <navigationItem key="navigationItem" id="ku2-kf-04j">
+                        <barButtonItem key="rightBarButtonItem" style="done" systemItem="search" id="NxS-Br-Gfb"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="productsCV" destination="hLh-J6-jMF" id="Y92-51-98T"/>
+                        <outlet property="searchBtn" destination="NxS-Br-Gfb" id="crn-eC-nz9"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="buN-9N-arr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2202" y="-404"/>
+            <point key="canvasLocation" x="2200.7633587786258" y="-404.22535211267609"/>
+        </scene>
+        <!--Filter-->
+        <scene sceneID="1S3-no-8Kr">
+            <objects>
+                <viewController id="wvC-fa-DmG" customClass="FilterViewController" customModule="iStore" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="iTe-L2-8rk">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="fKG-Zo-unQ"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Filter" leftItemsSupplementBackButton="YES" id="HyA-Fp-wB0">
+                        <barButtonItem key="leftBarButtonItem" image="chevron.down" catalog="system" id="2tb-xz-kYs">
+                            <connections>
+                                <action selector="dismiss:" destination="wvC-fa-DmG" id="GHT-cA-UI5"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gYg-PG-NBm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4118.320610687023" y="-404.22535211267609"/>
         </scene>
         <!--Cart-->
         <scene sceneID="oDV-Jm-ddi">
@@ -217,7 +294,9 @@
         <scene sceneID="1am-WS-6e3">
             <objects>
                 <tabBarController id="iZH-81-4jX" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" id="qlQ-Ah-Px3"/>
+                    <navigationItem key="navigationItem" id="qlQ-Ah-Px3">
+                        <barButtonItem key="backBarButtonItem" title="Home" id="u8a-4o-UsA"/>
+                    </navigationItem>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" itemPositioning="fill" id="fBx-41-oNV">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -231,11 +310,31 @@
             </objects>
             <point key="canvasLocation" x="103" y="-2"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="V77-06-57o">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Zyb-Ye-yhr" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="1zo-zf-fvV">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="56"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="wvC-fa-DmG" kind="relationship" relationship="rootViewController" id="QMg-BZ-qw0"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gPe-4T-kbh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3191.6030534351144" y="-404.22535211267609"/>
+        </scene>
     </scenes>
     <resources>
         <image name="camera.fill" catalog="system" width="128" height="93"/>
         <image name="cart.fill" catalog="system" width="128" height="102"/>
+        <image name="chevron.down" catalog="system" width="128" height="70"/>
         <image name="house.fill" catalog="system" width="128" height="104"/>
+        <image name="line.3.horizontal.decrease.circle.fill" catalog="system" width="128" height="123"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
