--- a/iStore/Views/Main.storyboard
+++ b/iStore/Views/Main.storyboard
@@ -82,24 +82,39 @@
                                                         </subviews>
                                                         <edgeInsets key="layoutMargins" top="8" left="16" bottom="8" right="16"/>
                                                     </stackView>
-                                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Pbu-hS-Qnx">
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f5k-6m-Sk3">
                                                         <rect key="frame" x="0.0" y="44.333333333333343" width="393" height="128"/>
+                                                        <subviews>
+                                                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Pbu-hS-Qnx">
+                                                                <rect key="frame" x="0.0" y="0.0" width="393" height="128"/>
+                                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="XOL-VU-7aV">
+                                                                    <size key="itemSize" width="72" height="128"/>
+                                                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                                                    <inset key="sectionInset" minX="8" minY="0.0" maxX="8" maxY="0.0"/>
+                                                                </collectionViewFlowLayout>
+                                                                <cells/>
+                                                                <connections>
+                                                                    <outlet property="dataSource" destination="Y6W-OH-hqX" id="jaP-8d-jT8"/>
+                                                                    <outlet property="delegate" destination="Y6W-OH-hqX" id="0Kg-Wy-Zko"/>
+                                                                </connections>
+                                                            </collectionView>
+                                                            <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="DPE-3T-ZFb">
+                                                                <rect key="frame" x="186.66666666666666" y="53.999999999999972" width="20" height="20"/>
+                                                            </activityIndicatorView>
+                                                        </subviews>
                                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                         <constraints>
-                                                            <constraint firstAttribute="height" constant="128" id="5f3-Yh-axo"/>
+                                                            <constraint firstItem="Pbu-hS-Qnx" firstAttribute="top" secondItem="f5k-6m-Sk3" secondAttribute="top" id="7GD-OG-hfq"/>
+                                                            <constraint firstItem="DPE-3T-ZFb" firstAttribute="centerY" secondItem="f5k-6m-Sk3" secondAttribute="centerY" id="9gW-PE-VBK"/>
+                                                            <constraint firstAttribute="height" constant="128" id="AVw-gb-Gi6"/>
+                                                            <constraint firstAttribute="bottom" secondItem="Pbu-hS-Qnx" secondAttribute="bottom" id="VjT-s4-9Jn"/>
+                                                            <constraint firstItem="DPE-3T-ZFb" firstAttribute="centerX" secondItem="f5k-6m-Sk3" secondAttribute="centerX" id="a4i-S8-Mpk"/>
+                                                            <constraint firstItem="Pbu-hS-Qnx" firstAttribute="leading" secondItem="f5k-6m-Sk3" secondAttribute="leading" id="hHn-Ac-ne0"/>
+                                                            <constraint firstAttribute="trailing" secondItem="Pbu-hS-Qnx" secondAttribute="trailing" id="wrr-5d-zUY"/>
                                                         </constraints>
-                                                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="XOL-VU-7aV">
-                                                            <size key="itemSize" width="72" height="128"/>
-                                                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                                            <inset key="sectionInset" minX="8" minY="0.0" maxX="8" maxY="0.0"/>
-                                                        </collectionViewFlowLayout>
-                                                        <cells/>
-                                                        <connections>
-                                                            <outlet property="dataSource" destination="Y6W-OH-hqX" id="jaP-8d-jT8"/>
-                                                            <outlet property="delegate" destination="Y6W-OH-hqX" id="0Kg-Wy-Zko"/>
-                                                        </connections>
-                                                    </collectionView>
+                                                    </view>
                                                 </subviews>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="L0o-KA-0Zk">
@@ -165,6 +180,7 @@
                     <connections>
                         <outlet property="bestSellingCV" destination="0JC-2h-q2D" id="XLS-2r-6sX"/>
                         <outlet property="categoriesCV" destination="Pbu-hS-Qnx" id="v83-Bh-QLg"/>
+                        <outlet property="categoriesLoading" destination="DPE-3T-ZFb" id="hzJ-6s-vVR"/>
                         <segue destination="F6o-3y-I6i" kind="show" identifier="CategorySegue" id="9VK-Xv-puc"/>
                     </connections>
                 </viewController>
@@ -246,11 +262,12 @@
                     <connections>
                         <outlet property="productsCV" destination="hLh-J6-jMF" id="Y92-51-98T"/>
                         <outlet property="searchBtn" destination="NxS-Br-Gfb" id="crn-eC-nz9"/>
+                        <segue destination="Y05-7M-wdR" kind="show" identifier="BrandSegue" id="Y8n-oB-t11"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="buN-9N-arr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2200.7633587786258" y="-404.22535211267609"/>
+            <point key="canvasLocation" x="2256" y="-396"/>
         </scene>
         <!--Filter-->
         <scene sceneID="1S3-no-8Kr">
@@ -272,7 +289,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gYg-PG-NBm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4118.320610687023" y="-404.22535211267609"/>
+            <point key="canvasLocation" x="4303" y="-938"/>
         </scene>
         <!--Cart-->
         <scene sceneID="oDV-Jm-ddi">
@@ -289,6 +306,31 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TsS-i0-LSK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1079" y="393"/>
+        </scene>
+        <!--Brand View Controller-->
+        <scene sceneID="f9W-sy-arf">
+            <objects>
+                <viewController id="Y05-7M-wdR" customClass="BrandViewController" customModule="iStore" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="xeL-ZX-YCC">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Brands" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UQb-BL-z9u">
+                                <rect key="frame" x="169" y="213" width="54" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="zLV-dk-Xuh"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="ApB-0a-JgG"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tXZ-Ce-qg3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3172" y="-2"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="1am-WS-6e3">
@@ -326,7 +368,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gPe-4T-kbh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3191.6030534351144" y="-404.22535211267609"/>
+            <point key="canvasLocation" x="3172" y="-938"/>
         </scene>
     </scenes>
     <resources>
