--- a/iStore/Views/SubCategoryViewCell.xib
+++ b/iStore/Views/SubCategoryViewCell.xib
@@ -17,10 +17,10 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RZQ-6u-XlC">
-                        <rect key="frame" x="16" y="0.0" width="69" height="60"/>
+                        <rect key="frame" x="16" y="0.0" width="70" height="60"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="mnklnmk" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DoD-pW-2HS">
-                                <rect key="frame" x="0.0" y="20" width="70" height="21"/>
+                                <rect key="frame" x="0.0" y="19.666666666666668" width="70" height="21.000000000000004"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" systemColor="systemGray2Color"/>
                                 <nil key="highlightedColor"/>
